[gd_scene load_steps=7 format=3 uid="uid://cpmpyj6g3mixs"]

[ext_resource type="Script" uid="uid://h3xm4mtfbheb" path="res://scenes/ui/upgrade/upgrade_ui.gd" id="1_1vtxc"]
[ext_resource type="PackedScene" uid="uid://b67sm2faf4a7d" path="res://scenes/ui/upgrade/upgrade_card.tscn" id="2_6ikm1"]

[sub_resource type="Animation" id="Animation_6ikm1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.239216, 0.160784, 0.207843, 0)]
}

[sub_resource type="Animation" id="Animation_lrejf"]
resource_name = "in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.239216, 0.160784, 0.207843, 0), Color(0.239216, 0.160784, 0.207843, 0.462745)]
}

[sub_resource type="Animation" id="Animation_3eicq"]
resource_name = "out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.239216, 0.160784, 0.207843, 0.462745), Color(0.239216, 0.160784, 0.207843, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oqu6h"]
_data = {
&"RESET": SubResource("Animation_6ikm1"),
&"in": SubResource("Animation_lrejf"),
&"out": SubResource("Animation_3eicq")
}

[node name="UpgradeUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_1vtxc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_oqu6h")
}

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.239216, 0.160784, 0.207843, 0)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="UpgradeCard" parent="MarginContainer/CardContainer" instance=ExtResource("2_6ikm1")]
layout_mode = 2

[node name="UpgradeCard2" parent="MarginContainer/CardContainer" instance=ExtResource("2_6ikm1")]
layout_mode = 2

[node name="UpgradeCard3" parent="MarginContainer/CardContainer" instance=ExtResource("2_6ikm1")]
layout_mode = 2
